--- a/css/vita.css
+++ b/css/vita.css
@@ -66,13 +66,7 @@ img {
 .sait-nav {
   display: flex;
   align-items: center;
-  /* justify-content: space-between;            */
 }
-
-/* .sait-nav:not(:last-child){
-      padding-right: 50px;
- }
-  */
 
 header {
   border-bottom: 1px solid #ececec;
@@ -168,7 +162,6 @@ header {
 /* Hero section class="hero"*/
 
 .hero {
-  /* background-position: center; */
   background-size: cover;
   padding-bottom: 200px;
   padding-top: 200px;
@@ -305,12 +298,6 @@ header {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
-.list-item .team-scorecard {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
 .team-member {
   font-weight: 500;
   font-size: 16px;
@@ -329,13 +316,11 @@ header {
   margin-top: 10px;
 }
 .icons-list {
-  margin: 0 auto;
   margin-top: 16px;
-  margin-bottom: 30px;
   display: flex;
   justify-content: center;
 }
-.icons-list .icons-card {
+.icons-card {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -344,7 +329,6 @@ header {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  background-color: inherit;
   fill: var(--company-social-color);
   width: 44px;
   height: 44px;
@@ -352,7 +336,7 @@ header {
 }
 .icons-ref:hover,
 .icons-ref:focus {
-  fill: #ffffff;
+  fill: var(--white-color);
   background-color: var(--color-button-logo);
 }
 
@@ -377,7 +361,7 @@ header {
 .client-company:hover,
 .client-company:focus {
   fill: var(--color-button-logo);
-  outline: 1px solid var(--color-button-logo);
+  border: 1px solid var(--color-button-logo);
 }
 .client-company {
   display: flex;
@@ -386,7 +370,7 @@ header {
   fill: var(--company-social-color);
   width: 170px;
   height: 92px;
-  outline: 1px solid #afb1b8;
+  border: 1px solid #afb1b8;
 }
 
 .company-list:not(:last-child) {
